# konnyaku

./: LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
docs/: architecture-plan.md
src/: App.css  App.jsx
src-tauri/: Cargo.toml  IMPLEMENTATION_NOTES.md  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  translation.rs
src/components/: LanguageSelector.css  LanguageSelector.jsx  TranslationPanel.css  TranslationPanel.jsx
src/hooks/: useTranslation.js
