[package]
name = "konnyaku"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "konnyaku_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Translation model dependencies
# Disable OpenMP to avoid linking issues on macOS
llama-cpp-2 = { version = "0.1", default-features = false, features = ["metal"] }
tokio = { version = "1", features = ["full"] }
hf-hub = { version = "0.3", features = ["tokio"] }
directories = "5.0"
anyhow = "1.0"
encoding_rs = "0.8"
# For direct model download fallback
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"

